syntax = "proto3";


service Services {
    rpc Ping (PingRequest) returns (PingResponse) {
    }

    rpc Logout (LogoutRequest) returns (LogoutResponse) {
    }
    rpc Login (LoginRequest) returns (AuthResponse) {
    }
    rpc RefreshToken (RefreshTokenRequest) returns (AuthResponse) {
    }
    rpc LoginBiometric (LoginBiometricRequest) returns (AuthResponse) {
    }
    rpc Register (RegisterRequest) returns (AuthResponse) {
    }
    rpc AddAccount (AddAccountRequest) returns (AddAccountResponse) {
    }
    rpc GetAccounts (AccountsRequest) returns (AccountsResponse) {
    }
    rpc GetAccount (AccountRequest) returns (AccountResponse) {
    }
    rpc BuyProduct (BuyProductRequest) returns (BuyProductResponse) {
    }

}

message PingRequest {
}

message PingResponse {
    string name = 1;
}


message RefreshTokenRequest {
    string accessToken = 1;
}

message KeyPairResponse {
    string publicKey = 1;
    string privateKey = 2;
}

message LogoutRequest {
    string accessToken = 1;
}

message LogoutResponse {
}

message LoginBiometricRequest {
    string username = 1;
    string biometricKey = 2;
}

message LoginRequest {
    string username = 1;
    string password = 2;
}

message RegisterRequest {
    string username = 1;
    string privateKey = 2;
    string publicKey = 3;
}


message AuthResponse {
    string accessToken = 1;
    string dateExpire = 2;
    KeyPairResponse keyPair = 3;
}

message Account {
    string label = 1;
    string username = 2;
    string password = 3;
    string hint = 4;
}

message AccountSingle {
    int64 id = 1;
    string label = 2;
    string username = 3;
    string hint = 4;
}


message AddAccountRequest {
    string accessToken = 1;
    Account account = 2;
}
message AddAccountResponse {
    int64 id = 1;
}

message AccountsRequest {
    string accessToken = 1;
}
message AccountsResponse {
    repeated AccountSingle accounts = 1;
}

message AccountRequest {
    string accessToken = 1;
    int64 id = 2;
}
message AccountResponse {
    Account account = 1;
}

message BuyProductRequest {
    string accessToken = 1;
    string slug = 2;
}
message BuyProductResponse {
    bool success = 1;
}
